Design : Tampilan awal, carousel dan contact us

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
          <!-- ini pembuka welcome -->
         <section class="welcome">
-            <h1 id="welcome-text">Hi Mark, Welcome To Website</h1>
+            <h1 id="welcome-text">Hi Bimo, Welcome To Website</h1>
             <p>Ini adalah website portfolio RevoU Course Software Engineer</p>
         </section>
         <!-- penutup welcome -->
