Fixing ; Responsive layout

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         </section>        
     </div>
 
-    <footer>
+    <!-- <footer>
         <p class="copyright">Created by bimsdev @ 2025</p>
-    </footer>
+    </footer> -->
 </body>
 <script src="assets/js/script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
